# open-ontologies

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  docker.yml  python-release.yml  release.yml
benchmark/ontoaxiom/: ONTOAXIOM_SHOWDOWN.md  compare_conditions.py  rescore_from_predictions.py  run_bare_llm_ablation.py  run_raw_owl_ablation.py  score_all_conditions.py  score_condition_d.py
case-studies/assure-health/: .gitignore  BUILD_REPORT.md  README.md  demo.ipynb  requirements.txt  run-demo.sh
case-studies/bio-kg-triage/: .gitignore  BUILD_REPORT.md  README.md  demo.ipynb  requirements.txt  run-demo.sh
case-studies/blast-furnace-ironmaking/: README.md  blast-furnace-ontology.ttl  fault-rules.sparql  run-demo.sh  safety-invariants.ttl  sensor-snapshots.ttl
case-studies/certicoupla/: BUILD_REPORT.md  README.md  demo.ipynb  requirements.txt  run-demo.sh
case-studies/heritage-aerial/: README.md
case-studies/jc3iedm-ies4-crosswalk/: README.md  crosswalk.ttl  verify.sh
case-studies/mcp-ies-rag-demo/: README.md
case-studies/modip-plastics-kg/: .gitignore  BUILD_REPORT.md  CITATION.cff  LICENSE  README.md  metrics.json  requirements.txt  run_all.sh
case-studies/nature-governance-graph/: README.md  graph.jsonld  graph.ttl  metrics.json
case-studies/onto-correctness-bench/: .gitignore  BUILD_REPORT.md  README.md  demo.ipynb  run-demo.sh
case-studies/skills-england-esco-crosswalk/: README.md  crosswalk.ttl  logs_fetch.txt  metrics.json
case-studies/skills-england-occupational-maps/: README.md  build_ontology.py  case-study.md  technical-note.md  validate_ontology.py
case-studies/skills-mobility/: .gitignore  README.md  case-study.md  config.R  (+1 more)
docs/: benchmarks.md  ies-ecosystem.md  windows.md
examples/: medicine-sample-after.json  medicine-sample-before.json  three_layer_pipeline.rs
python/: .gitignore  README.md  pyproject.toml
python/examples/: python_usage.py
python/src/open_ontologies_lite/: __init__.py  align.py  engine.py  kgcl.py  server.py
python/tests/: test_align.py  test_engine.py  test_kgcl.py
src/: align.rs  align_fuzzy.rs  batch.rs  borderline_loop.rs  civex.rs  civex_pywhy.rs  classify_el.rs  coevolve.rs  config.rs  cq.rs  drift.rs  dynamics.rs  dynamics_bcplus.rs  embed.rs  enforce.rs  eval_alignment.rs  eval_rag.rs  extract_scaffold.rs  flora_pipeline.rs  graph.rs  hnsw_index.rs  inputs.rs  kgcl.rs  language.rs  lib.rs  main.rs  marketplace.rs  ontology.rs  plan_classical.rs  plan_pddl.rs  plan_validate.rs  policy.rs  projection_check.rs  runtime.rs  segment_retrieve.rs  server.rs  shacl.rs  shape_combinatorics.rs  socket_windows.rs  sql_sync.rs  (+4 more)
studio/: WINDOWS.md  package.json
tests/: align_borderline_test.rs  align_rrf_test.rs  civex_test.rs  drift_blank_node_test.rs  enforce_ies4_test.rs  kgcl_drift_test.rs  shacl_check_test.rs  socket_test.rs  three_layer_integration_test.rs  vecstore_test.rs
(+474 files in other folders)
