[package]
name = "open-ontologies"
version = "0.1.11"
edition = "2024"
description = "AI-native ontology engine — standalone MCP server"
license = "MIT"
repository = "https://github.com/fabio-rovai/open-ontologies"

[[bin]]
name = "open-ontologies"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
oxigraph = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4"
anyhow = "1"
thiserror = "2"
rayon = "1.10"
csv = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
serde_yaml = "0.9"
calamine = "0.26"
arrow = { version = "54", default-features = false, features = ["csv", "json"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"], optional = true }
duckdb = { version = "1", optional = true, features = ["bundled"] }
tract-onnx = { version = "0.21", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
instant-distance = { version = "0.6", optional = true }
dirs = "6"
shell-words = "1"

[features]
default = []
postgres = ["sqlx"]
duckdb = ["dep:duckdb"]
sql = ["postgres", "duckdb"]
embeddings = ["tract-onnx", "tokenizers", "instant-distance"]

[dev-dependencies]
tempfile = "3"
